--- a/package.json
+++ b/package.json
@@ -1,11 +1,27 @@
 {
   "name": "monetochka",
-  "version": "0.1.2",
-  "description": "Super simple currency formatter",
+  "version": "0.1.3",
+  "description": "Simple, fast and zero-dependency currency formatting library",
   "main": "./dist/index.js",
   "scripts": {
+    "build": "tsc",
     "test": "node dist/tests.js"
   },
-  "author": "Nikolay Solovyov",
-  "license": "MIT"
+  "author": "Nikolay Solovyov <i@mr-ozio.ru>",
+  "license": "MIT",
+  "keywords": [
+    "currency",
+    "money",
+    "format",
+    "utilities",
+    "finance",
+    "exchange",
+    "accounting",
+    "fiat",
+    "crypto"
+  ],
+  "devDependencies": {
+    "@types/node": "10.12.0",
+    "typescript": "3.1.3"
+  }
 }
