--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "start": "rollup -c rollup.config.js -w",
     "build": "rollup -c rollup.config.js && npm run dts",
     "dts": "dts-bundle-generator src/index.ts -o monetochka.d.ts",
-    "prepublish": "npm run jest && npm run"
+    "prepublish": "npm test && npm run build"
   },
   "files": [
     "LICENSE",
